# public-fused-chaos-index

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README_PUBLIC_SCOPE.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml
docs/: contributing.md  examples.md  index.md  install.md  maintaining_docs.md  release.md
docs/api/: fused_chaos_index.md  tier1.md  tier2.md
docs/artifacts/: manifests.md  npz_contracts.md  run_folders.md
docs/cli/: index.md  suites_validators.md  tier1.md  tier2.md
examples/: basic_demo.py  generate_example_artifacts.py
examples/data/: baseline_example.npz  collatz_example.npz  smacs_positions_kappa_example.npz
src/fused_chaos_index/: __init__.py  cli.py  gate.py  meta_tools.py  operational.py  run_manifest.py  suite.py  syk_collatz.py
src/fused_chaos_index/suites/: __init__.py  frontier.py  universality.py
src/fused_chaos_index/tier1/: __init__.py  add_quantum_mass.py  extract_radec.py  score_frontier.py  score_single.py
src/fused_chaos_index/tier2/: __init__.py  collatz_run_summary.py  cosmic_vs_collatz_fingerprint.py  plot_16m_discovery.py  stopping_time_vs_mass.py  universality_sweep.py
src/fused_chaos_index/validators/: __init__.py  bolshoi.py  tng.py
tests/: test_cli_manifest.py  test_meta_tools.py  test_smoke.py  test_suite.py  test_tier1.py  test_tier2.py
