[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "public-fused-chaos-index"
version = "0.1.3"
description = "Public-clean release of the Fused Chaos Index (FCI) algorithms (package + CLI + suite runner)"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "thequantumfalcon"},
]
keywords = ["fused chaos index", "graph", "spectral", "cosmology"]
dependencies = [
  "numpy>=1.24",
  "scipy>=1.10",
]

[project.optional-dependencies]
astro = [
  "astropy>=5.3",
  "astroquery>=0.4.6",
  "requests>=2.31",
]
sim = [
  "h5py>=3.9",
  "halotools>=0.9",
]
viz = [
  "matplotlib>=3.7",
  "seaborn>=0.13",
]
ml = [
  "scikit-learn>=1.3",
]
all = [
  "astropy>=5.3",
  "astroquery>=0.4.6",
  "requests>=2.31",
  "h5py>=3.9",
  "halotools>=0.9",
  "matplotlib>=3.7",
  "seaborn>=0.13",
  "scikit-learn>=1.3",
]

[project.urls]
Homepage = "https://github.com/thequantumfalcon/public-fused-chaos-index"
Repository = "https://github.com/thequantumfalcon/public-fused-chaos-index"

[project.scripts]
fci = "fused_chaos_index.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
